--- a/README.me
+++ b/README.me
@@ -1,1 +1,3 @@
 # TranslatorAPI-Go
+
+This repository will provide a Golang library that integrates multiple translation platform APIs, offering a single `Translator` function to specify the translation service. Currently, the repository is in the implementation phase.
